--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1379,8 +1379,13 @@ input, select, textarea {
 		letter-spacing: -0.015em;
 	}
 
-	h3, h4, h5, h6 {
+	h3, h4, h5 {
 		font-size: 1.25em;
+		letter-spacing: -0.015em;
+	}
+
+	h6 {
+		font-size: 0.8em;
 		letter-spacing: -0.015em;
 	}
 
@@ -2146,7 +2151,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.45);
 		text-align: center;
 		padding: 2em 0 0 0;
-		font-size: 0.75em;
+		font-size: 1.25em;
 	}
 
 		#footer a {
