--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1295,6 +1295,29 @@ input, select, textarea {
 
 		}
 
+	.text-row {
+		padding: 0 0 0.5em 0;
+		margin: 0 0 0 0;
+	}
+
+	.text-row > div {
+		padding: 0 0 0 0;
+	}
+
+	.text-row > div:first-child {
+		font-weight: 500;
+	}
+
+	.text-row > div > a { 
+		color: inherit; /* blue colors for links too */
+		text-decoration: inherit; /* no underline */
+		font-style: italic;
+	}
+
+	.text-row > div > a:hover {
+		text-decoration: underline;
+	}
+
 /* Basic */
 
 	html {
