--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1301,7 +1301,7 @@ input, select, textarea {
 	}
 
 	.text-row > div {
-		padding: 0 0 0 0;
+		padding: 0 0.25em 0 0.25em;
 	}
 
 	.text-row > div:first-child {
