--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2218,3 +2218,26 @@ input, select, textarea {
 			}
 
 		}
+
+
+
+	#attribution {
+		color: rgba(255, 255, 255, 0.45);
+		position: static;
+		text-align: center;
+		padding: 2em 0 0 0;
+		font-size: 0.75em;
+	}
+
+		#attribution a {
+			color: #ddd;
+			color: rgba(255, 255, 255, 0.65);
+			-moz-transition: color .25s ease-in-out;
+			-webkit-transition: color .25s ease-in-out;
+			-ms-transition: color .25s ease-in-out;
+			transition: color .25s ease-in-out;
+		}
+
+			#attribution a:hover {
+				color: white;
+			}
