--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2241,3 +2241,10 @@ input, select, textarea {
 			#attribution a:hover {
 				color: white;
 			}
+
+.simple_link { 
+	color: inherit; /* blue colors for links too */
+	text-decoration: inherit; /* no underline */
+	font-style: italic;
+}
+	
